style.css
body {
	background-color: black;
	color: white;
	font-family: 'Eczar', serif;
	display: flex;
	flex-direction: column;
	position: absolute;
	left: 50%;
	transform: translate(-50%);
	gap: 5em;
	padding-top: 5em;
}
#action_button {
	font-family: 'Eczar', serif;
	width: fit-content;
	background: rgb(255,0,0);
	background: linear-gradient(139deg, rgba(255,0,0,1) 0%, rgba(180,5,5,1) 60%, rgba(121,9,9,1) 65%, rgba(121,9,9,1) 100%);	background-color: transparent;
	border: none;
	border-radius: 3em 0em 5em 0em;
	padding: .5em;
	transition: font-size .2s  cubic-bezier(.25,.63,.61,.83);}

#action_button:hover{
	font-size: large;
}

#action_button > img {
	color: white;
	position: absolute;
	height: 3.5em;
	align-self: center;
	vertical-align: middle;
}
#hero {
	display: flex;
	flex-direction: row;
	align-content: center;
}
#hero > #content {
	display: flex;
	flex-direction: column;
	align-items: center;
	padding-top: 5em;
	gap: 5em
}
#portfolio > #action {
	height: 95vh;
}
#slogan {
	letter-spacing: 1em;
	width: max-content;
}
#logo {
	height: 75vh;
}

#contact {
	width: fit-content;
	display: flex;
	flex-direction: row;
	gap: 2em;
}

#socials {
	display: flex;
	flex-direction: column;
	float: right;
}

#socials > a {
	text-decoration: none;
	color: white;
	padding: .5em;
	font-size: 1.5em;
}

#portfolio{
	display: flex;
	flex-direction: column;
	gap: 10em;
	align-items: center;
}
#portfolio > #latest{
	width: 100%;
}
#portfolio > #action{
	text-align: center;
}
#featured {
	top: 100vh;
	display: flex;
	gap: 3em;
	align-items: center;
}
#featured > img {
	max-height: 80vh;
}
#featured > div {
	max-width: 20vw;
}

#attributions {
	font-size: .5em;
}

.social_icon {
	height: 1em;
	padding-right: 1em;
}

